# bless-contract

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
.github/workflow/: release.yaml
anchor/: Anchor.toml  tsconfig.json  vite.config.ts
anchor/programs/bless-token/: Cargo.toml
anchor/programs/bless-token/src/: constants.rs  errors.rs  lib.rs
anchor/programs/bless-token/src/context/: bless.rs  fund.rs  init.rs  meta.rs  mod.rs
anchor/programs/bless-token/src/states/: bitvec.rs  mod.rs
anchor/src/: exports.ts  index.ts
anchor/src/client/: base.ts  base_client.ts  bless_time_client.ts  bless_token_client.ts  blockhashcache.ts  client.ts  config.ts  errors.ts
anchor/tests/: bless_time.test.ts  bless_token.test.ts
src/: app.tsx
src/components/: app-modal.tsx
src/components/account/: account-ui.tsx
src/components/bless-time/: bless-time-feature.tsx
