[package]
name = "bless-token"
version = "0.1.0"
description = "This is bless token contract."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bless_token"

[features]
default = []
testnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
mpl-token-metadata = "5.1.0"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
