[package]
name = "bless-token"
version = "0.1.0"
description = "This is bless token contract."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bless_token"

[features]
default = []
testnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-panic = []
custom-heap = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = {version = "0.32.1", features = ["metadata"] }
